--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,170 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    font-family: Arial;
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #eee;
+}
+
+div, h1, h2, h3, h4, h5, h6, p, a {
+    background-color: #fff;
+}
+
+.header {
+    background-color: #FCB30F;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.header img {
+    display: inline-block;
+    height: 50px;
+    margin-right: 15px;
+}
+
+.header a {
+    color: #fff;
+    font-size: 400%;
+    background-color: transparent;
+}
+
+.header a:hover {
+    border-bottom: 4px solid #fff;
+}
+
+.menu {
+    height: 40px;
+    line-height: 40px;
+    color: rgba(255,255,255,0.7);
+    background-color: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+}
+
+.menu span {
+    display: inline-block;
+    margin: 0 3%;
+    margin-bottom: -2px;
+    height: 100%;
+}
+
+.menu span:hover {
+    cursor: pointer;
+    color: #fff;
+    border-bottom: 2px solid #fff;
+}
+
+.list-wrap {
+    display: flex;
+    justify-content: center;
+    background-color: #eee;
+}
+
+.list-container {
+    width: 100%;
+    max-width: 900px;
+    margin: 20px;
+    padding-top: 20px;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.14);
+}
+
+.list-item-container {
+    display: flex;
+    padding: 16px;
+}
+
+.list-item-upvotes {
+    margin: 10px;
+    width: 30px;
+    text-align: center;
+    align-self: center;
+    color: #c6c6c6;
+    font-weight: bold;
+}
+
+.list-item-thumb {
+	width: 40px;
+	height: 40px;
+}
+
+.list-item-description {
+	flex: 1;
+	align-self: flex-start;
+}
+
+.list-nav {
+    display: flex;
+    padding-bottom: 20px;
+    margin: 30px;
+}
+
+.list-nav-button {
+    margin: 0 10px;
+    padding: 8px 16px;
+    color: #24a0ed;
+    background-color: transparent;
+    border: 1px solid #edf1f3;
+    font-weight: bold;
+    border-radius: 3px;
+}
+
+.list-nav-button:hover {
+    background-color: #edf1f3;
+    cursor: pointer;
+}
+
+.list-current-page {
+    display: inline;
+    color: #738491;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.submitted-by {
+    color: #98abba;
+    font-size: 12px;
+    margin: 4px 0;
+}
+
+.submitted-by a {
+    color: #292f34;
+}
+
+.submitted-by a:hover {
+    color: #24a0ed;
+}
+
+.domain {
+    color: #98abba;
+    font-size: x-small;
+}
+
+.domain:hover {
+    color: #24a0ed;
+}
+
+a {
+    text-decoration: none;
+    font-size: inherit;
+}
+
+.title {
+    color: #24a0ed;
+    font-size: medium;
+}
+
+.title:visited {
+    color: #551a8b;
+}
+
+.comments {
+    color: #24a0ed;
+    font-weight: bold;
+}
