--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,5 +1,7 @@
-<div *ngIf="item" class="list-item-container">
-  <div class="list-item-upvotes">{{item.score}}</div>
+<div *ngIf="item && !empty" class="list-item-container">
+  <div class="list-item-upvotes">
+    {{item.score}}
+  </div>
   
   <div class="list-item-description">
     <a class="title" target="_blank" [href]="item.url">{{item.title}}</a>
@@ -10,7 +12,9 @@
 </div>
 
 <div *ngIf="empty" class="list-item-container">
-    <div class="list-item-upvotes">:(</div>
+    <div class="list-item-upvotes">
+      :(
+    </div>
     
     <div class="list-item-description">
       <a class="title" target="_blank" href="#">Empty list!</a>
