fix responsive layout issue

--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -2,6 +2,9 @@
   <div class="list-item-upvotes">
     {{item.score}}
   </div>
+  <div class="list-item-thumb">
+    <img [src]="item.thumbnail ? item.thumbnail : '../../assets/default.png'" alt="">
+  </div>
   
   <div class="list-item-description">
     <a class="title" target="_blank" [href]="item.url">{{item.title}}</a>
