fix asset path issues for gh pages

--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -3,7 +3,7 @@
     {{item.score}}
   </div>
   <div class="list-item-thumb">
-    <img [src]="item.thumbnail ? item.thumbnail : '../../assets/default.png'" alt="">
+    <img [src]="item.thumbnail ? item.thumbnail : 'assets/default.png'" alt="">
   </div>
   
   <div class="list-item-description">
