readme updates + fix asset path for local development

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="assets/Reddit-logo.png" />
+    <img src="../assets/Reddit-logo.png" />
     <a target="_blank" href="https://www.reddit.com/r/javascript/">javascript</a>
 </div>
 
